# audio_tagging

./: .gitignore  README.md  pyproject.toml  requirements.txt
audiotagtools/scripts/: __init__.py  edit_mp3s.py  files.py  images.py  sounds.py  strings.py  tags_query.py
